fix(major refactoring): improves notifications and readability

--- a/css/main.css
+++ b/css/main.css
@@ -118,7 +118,9 @@ button#sound {
   cursor: pointer;
 }
 
-.copy-notification {
+.copy,
+.limit,
+.error {
   position: absolute;
   top: -30px;
   left: 0;
@@ -135,9 +137,9 @@ button#sound {
 
 .fa-copy {
   position: absolute;
-  left: 7px;
-  font-size: 12px;
-  top: 7px;
+  left: 12px;
+  font-size: 16px;
+  top: 12px;
   cursor: pointer;
 }
 
